# OWMTelegramBot

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
owmtelegrambot/: bot.py
